--- a/Dotaciones la fortuna/public/index.html
+++ b/Dotaciones la fortuna/public/index.html
@@ -83,81 +83,81 @@
 				<article>
 					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Producción</a></h3>
+						<h3><a href="#">S.A.S</a></h3>
 					</header>
-					<p>Diverso banco de sonidos.</p>
+					<p></p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Grabación</a></h3>
+						<h3><a href="#">Gorras</a></h3>
 					</header>
-					<p>Excelente sistema de grabación.</p>
+					<p></p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Instrumentos</a></h3>
+						<h3><a href="#">1</a></h3>
 					</header>
-					<p>Comodos espacios con instrumentos.</p>
+					<p>Ajustables.</p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Mezcla y masterización</a></h3>
+						<h3><a href="#">Camisetas</a></h3>
 					</header>
-					<p>Sonido profesional en audio.</p>
+					<p>cuello redondo</p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Álbum</a></h3>
+						<h3><a href="#">2</a></h3>
 					</header>
-					<p>Cotice con nosotros.</p>
+					<p>Todas las tallas </p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Pulvinar sagittis congue</a></h3>
+						<h3><a href="#">S.A.S</a></h3>
 					</header>
-					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+					<p></p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Fermentum sagittis proin</a></h3>
+						<h3><a href="#">Todos los colores</a></h3>
 					</header>
-					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+					<p>100% algodón.</p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">DELANTALES</a></h3>
+						<h3><a href="#">Comodos</a></h3>
 					</header>
-					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+					<p>De alta calidad.</p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Ultrices urna sit lobortis</a></h3>
+						<h3><a href="#">Exelente terminado</a></h3>
 					</header>
-					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+					<p> </p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Varius magnis sollicitudin</a></h3>
+						<h3><a href="#">Elaboración y dedicación</a></h3>
 					</header>
-					<p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p>
+					<p> </p>
 				</article>
 
 			</div>
@@ -171,13 +171,10 @@
 				<header>
 					<h2><a href="#">DELANTALES</a></h2>
 					<p>
-						Ritmos y sensaciones al servicio de tus ideas.
+
 					</p>
 				</header>
 				<p>
-					Si tu objetivo es ser un profesional de la mezcla y del
-					sonido en general tienes que conocer varios fundamentos
-					teóricos sí o sí y uno de los más importantes es saber qué es la frecuencia.
 				</p>
 				<footer>
 					<a href="#" class="button">Inicio</a>
@@ -192,42 +189,35 @@
 			<section id="features" class="container special">
 				<header>
 					<h2>ANTIFLUIDOS</h2>
-					<p>Generos-Influencias-Fusiones.</p>
+					<p> </p>
 				</header>
 				<div class="row">
 					<article class="col-4 col-12-mobile special">
 						<a href="#" class="image featured"><img src="images/pic07.jpg" alt="" /></a>
 						<header>
-							<h3><a href="#">Hip-Hop</a></h3>
+							<h3><a href="#">1</a></h3>
 						</header>
 						<p>
-							Colección personal y actualizada en exclusiva para Producción de HipHop. Hay mucho más
-							contenido
-							pero te recomiendo que empieces por estas entradas y de forma natural.
+
 
 						</p>
 					</article>
 					<article class="col-4 col-12-mobile special">
 						<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
 						<header>
-							<h3><a href="#">Rock</a></h3>
+							<h3><a href="#">2</a></h3>
 						</header>
 						<p>
-							El rock and roll sigue la estructura del blues, encontrándose canciones de 12, 16 u 8
-							compases. El ritmo generalmente está en compás de 4/4 recayendo cierta acentuación en los
-							tiempos 2 y 4, siendo
-							esta marcada por un agresivo golpe en la caja de la batería en los tiempos mencionados..
+
 						</p>
 					</article>
 					<article class="col-4 col-12-mobile special">
 						<a href="#" class="image featured"><img src="images/pic09.jpg" alt="" /></a>
 						<header>
-							<h3><a href="#">Electro-Jazz</a></h3>
+							<h3><a href="#">3</a></h3>
 						</header>
 						<p>
-							El Nu jazz es un término genérico acuñado a finales de la década de los años 1990 para
-							referirse al estilo que mezcla elementos jazzísticos
-							con otros estilos musicales, como el funk, soul, música electrónica, y libre improvisación.
+
 						</p>
 					</article>
 				</div>
