--- a/Dotaciones la fortuna/public/index.html
+++ b/Dotaciones la fortuna/public/index.html
@@ -25,7 +25,7 @@
 			<!-- Inner -->
 			<div class="inner">
 				<header>
-					<h1><a href="index.html" id="logo.jpg">DOTACIONES LA FORTUNA</a></h1>
+					<h1><a href="index.html" id="logo.jpg">DOTACIONES LA FORTUNA S.A.S</a></h1>
 					<hr />
 					<p>PRENDAS DE VESTIR PARA EL TRABAJO</p>
 				</header>
