--- a/Dotaciones la fortuna/public/index.html
+++ b/Dotaciones la fortuna/public/index.html
@@ -268,12 +268,12 @@
 							<header>
 								<h3>Contactanos</h3>
 							</header>
-							<p> A través de nuestras redes sociales.</p>
+							<p> dotacioneslafortuna@gmail.com.</p>
 							<ul class="icons">
 
 
-								<li><a href="#" class="icon brands fa-instagram"><span
-											class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/dotacioneslf/?hl=es"
+										class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 
 
 								<li><a href="https://www.tiktok.com/@dotacioneslf?_t=8g4S6yrpeZq&_r=1"
