--- a/Dotaciones la fortuna/public/index.html
+++ b/Dotaciones la fortuna/public/index.html
@@ -166,7 +166,7 @@
 		<!-- Main -->
 		<div class="wrapper style2">
 
-			<article id="main" class="container special">
+			<article id="main" class="container special centrar">
 				<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
 				<header>
 					<h2><a href="#">DELANTALES</a></h2>
