--- a/Dotaciones la fortuna/public/index.html
+++ b/Dotaciones la fortuna/public/index.html
@@ -81,9 +81,9 @@
 			<div class="reel">
 
 				<article>
-					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+					<a href="#" class="image featured"><img src="./images/Gorra tela náutica con ajuste en belcro/Gorro estilo malla.JPG" alt="" /></a>
 					<header>
-						<h3><a href="#">S.A.S</a></h3>
+						<h3><a href="#">Gorro estilo malla</a></h3>
 					</header>
 					<p></p>
 				</article>
@@ -91,7 +91,7 @@
 				<article>
 					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Gorras</a></h3>
+						<h3><a href="#">Gorra tela náutica</a></h3>
 					</header>
 					<p></p>
 				</article>
@@ -99,63 +99,63 @@
 				<article>
 					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">1</a></h3>
+						<h3><a href="#">Con ajuste en belcro</a></h3>
 					</header>
-					<p>Ajustables.</p>
+					<p></p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">Camisetas</a></h3>
+						<h3><a href="#">Camiseta cuello redondo en algodón 180 unisex </a></h3>
 					</header>
-					<p>cuello redondo</p>
+					<p></p>
 				</article>
 
 				<article>
 					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 					<header>
-						<h3><a href="#">2</a></h3>
-					</header>
-					<p>Todas las tallas </p>
-				</article>
-
-				<article>
-					<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
-					<header>
-						<h3><a href="#">S.A.S</a></h3>
-					</header>
-					<p></p>
-				</article>
-
-				<article>
-					<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-					<header>
-						<h3><a href="#">Todos los colores</a></h3>
-					</header>
-					<p>100% algodón.</p>
-				</article>
-
-				<article>
-					<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-					<header>
-						<h3><a href="#">Comodos</a></h3>
-					</header>
-					<p>De alta calidad.</p>
-				</article>
-
-				<article>
-					<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-					<header>
-						<h3><a href="#">Exelente terminado</a></h3>
+						<h3><a href="#"></a></h3>
 					</header>
 					<p> </p>
 				</article>
 
 				<article>
-					<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+					<a href="#" class="image featured"><img src="images/Camiseta tipo polo dama elaborada en tela tipo lacoste/p.jpeg" alt="" /></a>
 					<header>
-						<h3><a href="#">Elaboración y dedicación</a></h3>
+						<h3><a href="#">Camiseta tipo polo dama elaborada en tela tipo lacoste</a></h3>
+					</header>
+					<p></p>
+				</article>
+
+				<article>
+					<a href="#" class="image featured"><img src="images/Camiseta tipo polo dama elaborada en tela tipo lacoste/p1.jpeg" alt="" /></a>
+					<header>
+						<h3><a href="#"></a></h3>
+					</header>
+					<p></p>
+				</article>
+
+				<article>
+					<a href="#" class="image featured"><img src="images/Jean dama en strech/WhatsApp Image 2023-09-27 at 14.34.15 (1).jpeg" alt="" /></a>
+					<header>
+						<h3><a href="#">Jean dama en strech</a></h3>
+					</header>
+					<p></p>
+				</article>
+
+				<article>
+					<a href="#" class="image featured"><img src="images/Jean dama en strech/WhatsApp Image 2023-09-27 at 14.34.15.jpeg" alt="" /></a>
+					<header>
+						<h3><a href="#"></a></h3>
+					</header>
+					<p> </p>
+				</article>
+
+				<article>
+					<a href="#" class="image featured"><img src="images/Jean dama en strech/WhatsApp Image 2023-09-27 at 14.34.16.jpeg" alt="" /></a>
+					<header>
+						<h3><a href="#"></a></h3>
 					</header>
 					<p> </p>
 				</article>
