--- a/Dotaciones la fortuna/public/index.html
+++ b/Dotaciones la fortuna/public/index.html
@@ -166,10 +166,13 @@
 		<!-- Main -->
 		<div class="wrapper style2">
 
-			<article id="main" class="container special centrar">
+			<article id="main" class="container special centrar col">
+				<a href="#" class="image featured"><img src="images/Bandana en tela antifluido/IMAGEN7_901607240 - Dotaciones La Fortuna.JPG" alt="" /></a>
 				<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
+				<a href="#" class="image featured"><img src="images/Bandana en tela antifluido/WhatsApp Image 2023-09-27 at 14.47.08.jpeg" alt="" /></a>
+			
 				<header>
-					<h2><a href="#">DELANTALES</a></h2>
+					<h2><a href="#">Bandana en tela antifluido</a></h2>
 					<p>
 
 					</p>
@@ -179,8 +182,8 @@
 				<footer>
 					<a href="#" class="button">Inicio</a>
 				</footer>
+			
 			</article>
-
 		</div>
 
 		<!-- Features -->
