--- a/Dotaciones la fortuna/public/index.html
+++ b/Dotaciones la fortuna/public/index.html
@@ -40,7 +40,7 @@
 					<li><a href="index.html">Inicio</a></li>
 					<li>
 						<a href="#">Servicios</a>
-						<ul>
+						<ul> 
 							<li><a href="#">Bota de seguridad</a></li>
 							<li><a href="#">Bota plástica</a></li>
 							<li><a href="#">Jean hombre y dama</a></li>
@@ -309,6 +309,8 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+
+	<!-- repositorio -->
 
 </body>
 
