--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 					<p> </p>
 				</header>
 				<footer>
-					<a href="#banner" class="button circled scrolly">CLIC</a>
+					<a href="#banner" class="button circled scrolly">Inicia</a>
 				</footer>
 			</div>
 
@@ -39,7 +39,7 @@
 				<ul>
 					<li><a href="index.html">Inicio</a></li>
 					<li>
-						<a href="#">Servicios</a>
+						<a href="#">Productos</a>
 						<ul> 
 							<li><a href="#">Bota de seguridad</a></li>
 							<li><a href="#">Bota plástica</a></li>
