--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Helios by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 
 <head>
@@ -14,6 +10,7 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="homepage is-preload">
@@ -163,6 +160,7 @@
 			</div>
 		</section>
 
+		
 		<!-- Main -->
 		<div class="wrapper style2">
 
@@ -282,13 +280,14 @@
 								<li><a href="https://www.tiktok.com/@dotacioneslf?_t=8g4S6yrpeZq&_r=1"
 										class="icon brands fa-tiktok"><span class="label">Tiktok</span></a></li>
 							</ul>
+							<a href="https://wa.me/573014628514?text=Me%20gustaría%20saber%20el%20precio%20del%20productos" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
 						</section>
 
 						<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved.</li>
-								<li>Design: <a href="http://html5up.net">Didier Castrillón</a></li>
+								<li>&copy; 2023 Dotaciones La Fortuna. Todos los derechos reservados.</li>
+								<li>Design: <a href="#">Didier Castrillón</a></li>
 							</ul>
 						</div>
 
